validações e interface
