# routes/marcaRoute.js
@@ -34,6 +34,15 @@ router.put("/:id", auth.validarFuncionario, (req,res) => {
     ctrl.alterar(req,res);
 });
 
+router.put("/:id/reativar", auth.validarFuncionario, (req,res) => {
+    /* #swagger.security = [{
+    "bearerAuth": []
+    }] */
+    // #swagger.tags = ['Marcas - FUNCIONARIO']
+    // #swagger.summary = "Reativa uma Marca inativa"
+    ctrl.reativar(req,res);
+});
+
 router.delete("/:id", auth.validarFuncionario, (req,res) => {
     /* #swagger.security = [{
     "bearerAuth": []
