# routes/produtoRoute.js
@@ -33,6 +33,15 @@ router.put("/:id", auth.validarFuncionario, (req,res) => {
     ctrl.alterar(req,res);
 });
 
+router.put("/:id/reativar", auth.validarFuncionario, (req,res) => {
+    /* #swagger.security = [{
+    "bearerAuth": []    
+    }] */
+    // #swagger.tags = ['Produtos - FUNCIONARIO']
+    // #swagger.summary = "Reativa um Produto"
+    ctrl.reativar(req,res);
+});
+
 router.delete("/:id", auth.validarFuncionario, (req,res) => {
     /* #swagger.security = [{
     "bearerAuth": []   
