# swaggerOutput.json
@@ -21,6 +21,13 @@
         "description": "",
         "parameters": [
           {
+            "name": "inativos",
+            "in": "query",
+            "schema": {
+              "type": "string"
+            }
+          },
+          {
             "name": "authorization",
             "in": "header",
             "schema": {
@@ -262,6 +269,54 @@
         ]
       }
     },
+    "/usuario/{id}/reativar": {
+      "put": {
+        "tags": [
+          "Usuário - FUNCIONARIO"
+        ],
+        "summary": "Reativa um Usuário",
+        "description": "",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "schema": {
+              "type": "string"
+            }
+          },
+          {
+            "name": "authorization",
+            "in": "header",
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "400": {
+            "description": "Bad Request"
+          },
+          "401": {
+            "description": "Unauthorized"
+          },
+          "403": {
+            "description": "Forbidden"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        },
+        "security": [
+          {
+            "bearerAuth": []
+          }
+        ]
+      }
+    },
     "/autenticacao/usuario": {
       "get": {
         "tags": [
@@ -339,6 +394,13 @@
         "summary": "Lista todos os Serviços",
         "description": "",
         "parameters": [
+          {
+            "name": "inativos",
+            "in": "query",
+            "schema": {
+              "type": "string"
+            }
+          },
           {
             "name": "authorization",
             "in": "header",
@@ -592,6 +654,54 @@
         ]
       }
     },
+    "/servicos/{id}/reativar": {
+      "put": {
+        "tags": [
+          "Servicos - FUNCIONARIO"
+        ],
+        "summary": "Reativa um Serviço",
+        "description": "",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "schema": {
+              "type": "string"
+            }
+          },
+          {
+            "name": "authorization",
+            "in": "header",
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "400": {
+            "description": "Bad Request"
+          },
+          "401": {
+            "description": "Unauthorized"
+          },
+          "403": {
+            "description": "Forbidden"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        },
+        "security": [
+          {
+            "bearerAuth": []
+          }
+        ]
+      }
+    },
     "/produtos/": {
       "get": {
         "tags": [
@@ -600,6 +710,13 @@
         "summary": "Lista todos os Produtos",
         "description": "",
         "parameters": [
+          {
+            "name": "inativos",
+            "in": "query",
+            "schema": {
+              "type": "string"
+            }
+          },
           {
             "name": "authorization",
             "in": "header",
@@ -865,6 +982,54 @@
         ]
       }
     },
+    "/produtos/{id}/reativar": {
+      "put": {
+        "tags": [
+          "Produtos - FUNCIONARIO"
+        ],
+        "summary": "Reativa um Produto",
+        "description": "",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "schema": {
+              "type": "string"
+            }
+          },
+          {
+            "name": "authorization",
+            "in": "header",
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "400": {
+            "description": "Bad Request"
+          },
+          "401": {
+            "description": "Unauthorized"
+          },
+          "403": {
+            "description": "Forbidden"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        },
+        "security": [
+          {
+            "bearerAuth": []
+          }
+        ]
+      }
+    },
     "/marcas/": {
       "get": {
         "tags": [
@@ -873,6 +1038,13 @@
         "summary": "Lista todas as Marcas",
         "description": "",
         "parameters": [
+          {
+            "name": "inativos",
+            "in": "query",
+            "schema": {
+              "type": "string"
+            }
+          },
           {
             "name": "authorization",
             "in": "header",
@@ -1096,6 +1268,54 @@
           },
           "404": {
             "description": "Not Found"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        },
+        "security": [
+          {
+            "bearerAuth": []
+          }
+        ]
+      }
+    },
+    "/marcas/{id}/reativar": {
+      "put": {
+        "tags": [
+          "Marcas - FUNCIONARIO"
+        ],
+        "summary": "Reativa uma Marca inativa",
+        "description": "",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "schema": {
+              "type": "string"
+            }
+          },
+          {
+            "name": "authorization",
+            "in": "header",
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "400": {
+            "description": "Bad Request"
+          },
+          "401": {
+            "description": "Unauthorized"
+          },
+          "403": {
+            "description": "Forbidden"
           },
           "500": {
             "description": "Internal Server Error"
